--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,35 +1,108 @@
+# Nome do fluxo de trabalho.
+name: Java CI/CD com StackHawk
 
-name: "StackHawk"
-
+# Evento que aciona o fluxo de trabalho.
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  schedule:
-    - cron: '22 16 * * 3'
+    branches:
+      - main
 
-permissions:
-  contents: read
-
+# Definição de trabalhos (jobs) dentro do fluxo de trabalho.
 jobs:
-  stackhawk:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
-    name: StackHawk
-    runs-on: ubuntu-20.04
+  # Job para compilar o código.
+  build:
+    name: Compilação
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
+
+      - name: Configurar JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Compilar Aplicação
+        run: mvn --batch-mode --update-snapshots verify
+
+      - name: Upload do Artefato
+        uses: actions/upload-artifact@v2
+        with:
+          name: meu-artefato
+          path: target/*.jar
+
+  # Job para a verificação de segurança com o StackHawk.
+  stackhawk:
+    name: Verificação StackHawk
+    runs-on: ubuntu-20.04
+    needs: build
+
+    steps:
+      - name: Checkout do código
         uses: actions/checkout@v3
+    
+      - name: Baixar artefato
+        uses: actions/download-artifact@v2
+        with:
+          name: meu-artefato
 
-      - name: Start your service
-        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
+      - name: Iniciar seu serviço
+        run: java -jar actions-java-lab-1.0-SNAPSHOT-jar-with-dependencies.jar &
 
-      - name: Run HawkScan
+      - name: Executar o HawkScan
         uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
-        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
+        continue-on-error: true
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
           codeScanningAlerts: true
           githubToken: ${{ github.token }}
+
+  # Job para a análise de segurança com o CodeQL.
+  security_analysis:
+    name: Análise de Segurança
+    runs-on: ubuntu-latest
+    needs: stackhawk
+
+    steps:
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
+
+      - name: Inicializar o CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: java-kotlin
+
+      - name: Executar a Análise CodeQL
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:java-kotlin"
+
+  # Job para realizar o deploy.
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: security_analysis
+
+    steps:
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
+
+      - name: Deploy no Servidor
+        run: |
+          # Comandos para fazer o deploy da sua aplicação no servidor
+
+  # Job para evidenciar informações.
+  evidence:
+    name: Evidências
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    steps:
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
+
+      - name: Exibir processos em execução
+        run: ps aux
