--- a/.github/workflows/ci_cd_2_pipeline.yml
+++ b/.github/workflows/ci_cd_2_pipeline.yml
@@ -1,74 +1,109 @@
-name: CI/CD Pipeline
+# Nome do fluxo de trabalho.
+name: Java CI/CD com StackHawk
 
+# Evento que aciona o fluxo de trabalho.
 on:
   push:
     branches:
       - main
 
+# Definição de trabalhos (jobs) dentro do fluxo de trabalho.
 jobs:
+  # Job para compilar o código.
   build:
+    name: Compilação
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout do Código
-      uses: actions/checkout@v2
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
 
-    - name: Build
-      run: |
-        # Comandos para construir o projeto
-        make build
+      - name: Configurar JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    - name: Criação do Artefato
-      run: |
-        # Comandos para criar o artefato
-        mkdir dist
-        cp -r * dist/
-      artifacts:
-        path: dist
+      - name: Compilar Aplicação
+        run: mvn --batch-mode --update-snapshots verify
 
-  security_analysis:
-    runs-on: ubuntu-latest
+      - name: Upload do Artefato
+        uses: actions/upload-artifact@v2
+        with:
+          name: meu-artefato
+          path: target/*.jar
 
+  # Job para a verificação de segurança com o StackHawk.
+  stackhawk:
+    name: Verificação StackHawk
+    runs-on: ubuntu-20.04
     needs: build
 
     steps:
-    - name: Checkout do Código
-      uses: actions/checkout@v2
+      - name: Checkout do código
+        uses: actions/checkout@v2
+    
+      - name: Baixar artefato
+        uses: actions/download-artifact@v2
+        with:
+          name: meu-artefato
+          path: target
 
-    - name: Install Dependencies
-      run: |
-        # Comandos para instalar dependências necessárias para as análises de segurança
-        make install-dependencies
+      - name: Iniciar seu serviço
+        run: java -jar target/actions-java-lab-1.0-SNAPSHOT-jar-with-dependencies.jar &
 
-    - name: Análise SAST
-      run: |
-        # Comandos para executar a análise SAST
-        make sast-analysis
+      - name: Executar o HawkScan
+        uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
+        continue-on-error: true
+        with:
+          apiKey: ${{ secrets.HAWK_API_KEY }}
+          codeScanningAlerts: true
+          githubToken: ${{ github.token }}
 
-    - name: Análise DAST
-      run: |
-        # Comandos para executar a análise DAST
-        make dast-analysis
-
-    - name: Evidência do Repositório com SCA e Proteção de Credenciais
-      run: |
-        # Comandos para executar a análise de SCA e proteção de credenciais
-        make sca-analysis
-        make credentials-protection-analysis
-
-  deploy:
+  # Job para a análise de segurança com o CodeQL.
+  security_analysis:
+    name: Análise de Segurança
     runs-on: ubuntu-latest
+    needs: stackhawk
 
+    steps:
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
+
+      - name: Inicializar o CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: java-kotlin
+
+      - name: Executar a Análise CodeQL
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:java-kotlin"
+
+  # Job para realizar o deploy.
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
     needs: security_analysis
 
     steps:
-    - name: Checkout do Código
-      uses: actions/checkout@v2
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
 
-    - name: Deploy no Servidor de Aplicação
-      run: |
-        # Comandos para executar o deploy no servidor de aplicação
-        make deploy
+      - name: Deploy no Servidor
+        run: |
+          # Comandos para fazer o deploy da sua aplicação no servidor
 
-    - name: Evidência da Aplicação em Execução no Servidor
-      run: ps aux
+  # Job para evidenciar informações.
+  evidence:
+    name: Evidências
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    steps:
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
+
+      - name: Exibir processos em execução
+        run: ps aux
