--- a/.github/workflows/fullpipeline.yml
+++ b/.github/workflows/fullpipeline.yml
@@ -1,109 +1,82 @@
-# Nome do fluxo de trabalho.
-name: Java CI/CD com StackHawk
+name: CI/CD Pipeline
 
-# Evento que aciona o fluxo de trabalho.
 on:
   push:
     branches:
       - main
 
-# Definição de trabalhos (jobs) dentro do fluxo de trabalho.
 jobs:
-  # Job para compilar o código.
   build:
-    name: Compilação
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Configurar JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+    - name: Build Application
+      run: |
+        # Comandos para construir sua aplicação
+        # Exemplo: ./build.sh
 
-      - name: Compilar Aplicação
-        run: mvn --batch-mode --update-snapshots verify
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: path/to/artifact
 
-      - name: Upload do Artefato
-        uses: actions/upload-artifact@v2
-        with:
-          name: meu-artefato
-          path: target/*.jar
+  security_analysis:
+    name: Security Analysis
+    runs-on: ubuntu-latest
 
-  # Job para a verificação de segurança com o StackHawk.
-  stackhawk:
-    name: Verificação StackHawk
-    runs-on: ubuntu-20.04
     needs: build
 
     steps:
-      - name: Checkout do código
-        uses: actions/checkout@v2
-    
-      - name: Baixar artefato
-        uses: actions/download-artifact@v2
-        with:
-          name: meu-artefato
-          path: target
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Iniciar seu serviço
-        run: java -jar target/actions-java-lab-1.0-SNAPSHOT-jar-with-dependencies.jar &
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: java-kotlin
+        # Adicione suas consultas de CodeQL aqui se necessário
 
-      - name: Executar o HawkScan
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+      with:
+        category: "/language:java-kotlin"
+
+name: "StackHawk"
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  schedule:
+    - cron: '22 16 * * 3'
+
+permissions:
+  contents: read
+
+jobs:
+  stackhawk:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
+    name: StackHawk
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Start your service
+        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
+
+      - name: Run HawkScan
         uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
-        continue-on-error: true
+        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
           codeScanningAlerts: true
           githubToken: ${{ github.token }}
-
-  # Job para a análise de segurança com o CodeQL.
-  security_analysis:
-    name: Análise de Segurança
-    runs-on: ubuntu-latest
-    needs: stackhawk
-
-    steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v2
-
-      - name: Inicializar o CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: java-kotlin
-
-      - name: Executar a Análise CodeQL
-        uses: github/codeql-action/analyze@v2
-        with:
-          category: "/language:java-kotlin"
-
-  # Job para realizar o deploy.
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: security_analysis
-
-    steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v2
-
-      - name: Deploy no Servidor
-        run: |
-          # Comandos para fazer o deploy da sua aplicação no servidor
-
-  # Job para evidenciar informações.
-  evidence:
-    name: Evidências
-    runs-on: ubuntu-latest
-    needs: deploy
-
-    steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v2
-
-      - name: Exibir processos em execução
-        run: ps aux
