--- a/.github/workflows/fullpipeline.yml
+++ b/.github/workflows/fullpipeline.yml
@@ -14,11 +14,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Build Application
-      run: |
-        # Comandos para construir sua aplicação
-        # Exemplo: ./build.sh
-
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
@@ -56,6 +51,16 @@ jobs:
       steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+
+      - name: Configurar JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Compilar Aplicação
+        run: mvn --batch-mode --update-snapshots verify
   
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
