--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,26 +1,50 @@
-name: Java CI
+name: CI/CD Pipeline
 
+on:
+  push:
+    branches:
+      - main
 
-on: [push]
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - run: mvn --batch-mode --update-snapshots verify
-      - run: mkdir staging && cp target/*.jar staging
-      - uses: actions/upload-artifact@v3
-        with:
-          name: Package
-          path: staging
+    - name: Build Application
+      run: |
+        # Comandos para construir sua aplicação
+        # Exemplo: ./build.sh
 
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: path/to/artifact
+
+  security_analysis:
+    name: Security Analysis
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: java-kotlin
+        # Adicione suas consultas de CodeQL aqui se necessário
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
+      with:
+        category: "/language:java-kotlin"
 
   stackhawk:
     permissions:
@@ -28,7 +52,7 @@ jobs:
       security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
     name: StackHawk
     runs-on: ubuntu-20.04
-    needs: build  
+    needs: security_analysis  
 
     steps:
       - name: Checkout code
@@ -37,44 +61,43 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
-          name: Package
+          name: my-artifact
 
       - name: Start your service
         run: java -jar actions-java-lab-1.0-SNAPSHOT-jar-with-dependencies.jar &
 
       - name: Run HawkScan
         uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
-        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
+        continue-on-error: true
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
           codeScanningAlerts: true
           githubToken: ${{ github.token }}
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+  codacy-security-scan:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+    name: Codacy Security Scan
+    runs-on: ubuntu-latest
+    needs: security_analysis
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-#           🦅 STACKHAWK        https://stackhawk.com
+      - name: Run Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          verbose: true
+          output: results.sarif
+          format: sarif
+          gh-code-scanning-compat: true
+          max-allowed-issues: 2147483647
 
-# The StackHawk HawkScan action makes it easy to integrate dynamic application security testing (DAST) into your
-# CI pipeline. See the Getting Started guide (https://docs.stackhawk.com/hawkscan/) to get up and running with
-# StackHawk quickly.
-
-# To use this workflow, you must:
-#
-# 1.  Create an API Key and Application: Sign up for a free StackHawk account to obtain an API Key and
-#     create your first app and configuration file at https://app.stackhawk.com.
-#
-# 2.  Save your API Key as a Secret: Save your API key as a GitHub Secret named HAWK_API_KEY.
-#
-# 3.  Add your Config File: Add your stackhawk.yml configuration file to the base of your repository directory.
-#
-# 4.  Set the Scan Failure Threshold: Add the hawk.failureThreshold configuration option
-#     (https://docs.stackhawk.com/hawkscan/configuration/#hawk) to your stackhawk.yml configuration file. If your scan
-#     produces alerts that meet or exceed the hawk.failureThreshold alert level, the scan will return exit code 42
-#     and trigger a Code Scanning alert with a link to your scan results.
-#
-# 5.  Update the "Start your service" Step: Update the "Start your service" step in the StackHawk workflow below to
-#     start your service so that it can be scanned with the "Run HawkScan" step.
+      - name: Upload SARIF results file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: results.sarif
