--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -19,11 +19,17 @@ jobs:
         # Comandos para construir sua aplicação
         # Exemplo: ./build.sh
 
+        # Mudança para o diretório do projeto
+        cd _pom.xml
+
+        # Execução do Maven com o caminho específico para o pom.xml
+        mvn --batch-mode --update-snapshots verify
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: my-artifact
-        path: path/to/artifact
+        path: _pom.xml/path/to/artifact
 
   security_analysis:
     name: Security Analysis
@@ -46,30 +52,58 @@ jobs:
       with:
         category: "/language:java-kotlin"
 
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
+  stackhawk:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
+    name: StackHawk
+    runs-on: ubuntu-20.04
+    needs: security_analysis  
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+    
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: my-artifact
+
+      - name: Start your service
+        run: java -jar actions-java-lab-1.0-SNAPSHOT-jar-with-dependencies.jar &
+
+      - name: Run HawkScan
+        uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
+        continue-on-error: true
+        with:
+          apiKey: ${{ secrets.HAWK_API_KEY }}
+          codeScanningAlerts: true
+          githubToken: ${{ github.token }}
+
+  codacy-security-scan:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+    name: Codacy Security Scan
+    runs-on: ubuntu-latest
     needs: security_analysis
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Deploy to Server
-      run: |
-        # Comandos para fazer o deploy da sua aplicação no servidor
+      - name: Run Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action@d840f886c4bd4edc059706d09c6a1586111c540b
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          verbose: true
+          output: results.sarif
+          format: sarif
+          gh-code-scanning-compat: true
+          max-allowed-issues: 2147483647
 
-  evidence:
-    name: Evidence
-    runs-on: ubuntu-latest
-
-    needs: deploy
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Show Running Processes
-      run: ps aux
-
+      - name: Upload SARIF results file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: results.sarif
