--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -20,7 +20,7 @@ jobs:
         # Exemplo: ./build.sh
 
         # Mudança para o diretório do projeto
-        cd _pom.xml
+        cd actions-java-lab-main-final/._pom.xml
 
         # Execução do Maven com o caminho específico para o pom.xml
         mvn --batch-mode --update-snapshots verify
@@ -29,7 +29,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: my-artifact
-        path: _pom.xml/path/to/artifact
+        path: actions-java-lab-main-final/._pom.xml/path/to/artifact
 
   security_analysis:
     name: Security Analysis
