--- a/.github/workflows/deploy_infra.yml
+++ b/.github/workflows/deploy_infra.yml
@@ -19,14 +19,18 @@ jobs:
         # Comandos para construir sua aplicação
         # Exemplo: ./build.sh
 
+        # Mudança para o diretório do projeto
+        cd actions-java-lab-main-final/.pom.xml
+
         # Execução do Maven com o caminho específico para o pom.xml
-        mvn --batch-mode --update-snapshots verify -f actions-java-lab-main-final/._pom.xml/pom.xml
+        mvn --batch-mode --update-snapshots verify -f ./pom.xml
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: my-artifact
-        path: actions-java-lab-main-final/._pom.xml
+        path: actions-java-lab-main-final/.pom.xml/path/to/artifact
+
 
 
   security_analysis:
