--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -135,7 +135,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
-    needs: security_analysis
+    needs: codacy-security-scan
 
     steps:
     - name: Checkout repository
