--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,26 +25,26 @@ jobs:
         name: my-artifact
         path: path/to/artifact
 
-  security_analysis:
-    name: Security Analysis
-    runs-on: ubuntu-latest
+  # security_analysis:
+  #   name: Security Analysis
+  #   runs-on: ubuntu-latest
 
-    needs: build
+  #   needs: build
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Checkout repository
+  #     uses: actions/checkout@v2
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: java-kotlin
-        # Adicione suas consultas de CodeQL aqui se necessário
+  #   - name: Initialize CodeQL
+  #     uses: github/codeql-action/init@v2
+  #     with:
+  #       languages: java-kotlin
+  #       # Adicione suas consultas de CodeQL aqui se necessário
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
-      with:
-        category: "/language:java-kotlin"
+  #   - name: Perform CodeQL Analysis
+  #     uses: github/codeql-action/analyze@v2
+  #     with:
+  #       category: "/language:java-kotlin"
 
   stackhawk:
     permissions:
