--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,7 +52,7 @@ jobs:
       security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
     name: StackHawk
     runs-on: ubuntu-20.04
-    needs: security_analysis  
+    # needs: security_analysis  
 
     steps:
       - name: Checkout code
@@ -81,7 +81,7 @@ jobs:
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     name: Codacy Security Scan
     runs-on: ubuntu-latest
-    needs: security_analysis
+    # needs: security_analysis
 
     steps:
       - name: Checkout code
