--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,23 +52,16 @@ jobs:
       security-events: write # for stackhawk/hawkscan-action to upload code scanning alert info
     name: StackHawk
     runs-on: ubuntu-20.04
-    # needs: security_analysis  
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-    
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: my-artifact
 
       - name: Start your service
-        run: java -jar actions-java-lab-1.0-SNAPSHOT-jar-with-dependencies.jar &
+        run: ./your-service.sh &                  # ✏️ Update this to run your own service to be scanned
 
       - name: Run HawkScan
         uses: stackhawk/hawkscan-action@4c3258cd62248dac6d9fe91dd8d45928c697dee0
-        continue-on-error: true
+        continue-on-error: true                   # ✏️ Set to false to break your build on scan errors
         with:
           apiKey: ${{ secrets.HAWK_API_KEY }}
           codeScanningAlerts: true
