--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -95,37 +95,35 @@ jobs:
         with:
           sarif_file: results.sarif
   analyze:
-      name: Analyze
-      runs-on: ubuntu-latest
-      timeout-minutes: 360
-      permissions:
-        actions: read
-        contents: read
-        security-events: write
-    
-      strategy:
-        fail-fast: false
-        matrix:
-          language: ['java-kotlin']
-    
-      steps:
-        - name: Checkout repository
-          uses: actions/checkout@v3
-    
-        - name: Initialize CodeQL
-          uses: github/codeql-action/init@v2
-          with:
-            languages: ${{ matrix.language }}
-    
-        - name: Build with Maven
-          run: |
-            cd .github
-            mvn clean install
-    
-        - name: Perform CodeQL Analysis
-          uses: github/codeql-action/analyze@v2
-          with:
-            category: "/language:${{ matrix.language }}"
+    name: Analyze
+    runs-on: ubuntu-latest
+    timeout-minutes: 360
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+  
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ['java-kotlin']
+  
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+  
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: ${{ matrix.language }}
+  
+      - name: Build with Maven
+        run: mvn clean install
+  
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+        with:
+          category: "/language:${{ matrix.language }}"
 
   deploy:
     name: Deploy
